# space-blaster

./: CMakeLists.txt  Makefile  README.md  options.ini
.github/workflows/: cmake.yml
cmake/: mingw.cmake
src/: blaster.cpp  blaster.h  game.cpp  game.h
src/config/: INIReader.h
src/game/: CamperPunisher.cpp  CamperPunisher.h  alien.cpp  alien.h  asteroid.cpp  asteroid.h  asteroidHandler.cpp  asteroidHandler.h  background.cpp  background.h  bullethandler.cpp  bullethandler.h  collisionutils.cpp  collisionutils.h  coordinateutils.cpp  coordinateutils.h  entity.cpp  entity.h  graphics.cpp  graphics.h  particle.cpp  particle.h  particleHandler.cpp  particleHandler.h  rng.cpp  rng.h  ship.cpp  ship.h  textEngine.cpp  textEngine.h  timingtask.cpp  timingtask.h  viewport.cpp  viewport.h
src/game/weapons/: bullet.cpp  bullet.h  cannon.h  doubleshotgun.cpp  doubleshotgun.h  machineGun.h  mininuke.cpp  mininuke.h  weapon.cpp  weapon.h
src/messaging/: messagehandler.cpp  messagehandler.h
src/messaging/buffers/: schema.fbs  schema_generated.h
src/networking/: socket.cpp  socket.h
src/physics/: physicsengine.cpp  physicsengine.h  physicsobject.cpp  physicsobject.h
src/rendering/: renderengine.cpp  renderengine.h  renderobject.cpp  renderobject.h
src/resources/: FreeSans.h
src/server/: testserver.py
src/server/Blaster/Messages/: BlasterMessage.py  Color.py  MessageType.py  Point.py  RenderMode.py  VisualObject.py
windows_build/: release.sh
